Fixed system dependency methods